# nekara-artifact

./: .gitignore  .gitmodules  Dockerfile  INSTALL.md  LICENSE  README.md  artifact.sh  build.sh  devcontainer.json
.devcontainer/: devcontainer.json  setup.sh
Coyote/: build.ps1
Coyote/Uncontrolled/: Coyote.sln
Coyote/Uncontrolled/Benchmarks/: Benchmarks.sln  (+2 more)
CoyoteActors/: artifact.sh  build.ps1  build.sh  chainreplication_coyote.json  chainreplication_tpl_nekara.json  chainreplication_uncontrolled.json  experiments.ps1  failuredetector_coyote.json  failuredetector_tpl_nekara.json  failuredetector_uncontrolled.json  paxos_coyote.json  paxos_tpl_nekara.json  paxos_uncontrolled.json  raft_coyote.json  raft_tpl_nekara.json  raft_uncontrolled.json
CoyoteActors/Results/: chainreplication_coyote.json  chainreplication_coyote_nekara.json  failuredetector_coyote.json  failuredetector_coyote_nekara.json  paxos_coyote.json  paxos_coyote_nekara.json  raft_coyote.json  raft_coyote_nekara.json
Maple/: MasterBuildAndTest.sh  PrintTestResults.sh
Memcached/: MasterBuildAndTest.sh
Memcached/MCBug5/memcached-127/memcached-1.4.4/include_coyote/coyote-scheduler/src/: CMakeLists.txt  scheduler.cc
Memcached/MCBug5/memcached-127/memcached-1.4.4/include_coyote/coyote-scheduler/src/strategies/Exhaustive/: dfs_strategy.cc
TSVD/: README.md  tsvd_artifacts.sh
TSVD/DateTimeExtensions/: DateTimeExtensions.sln
TSVD/fluentassertions/: FluentAssertions.sln
TSVD/kubernetes-client/: Directory.Build.props  Directory.Build.targets  kubernetes-client.ruleset  stylecop.json
(+698 files in other folders)
